@@ -192,6 +192,11 @@ A: The problem is that the Mozilla/Gecko/Firefox plugin system doesn't allow for
 For example, the Totem <i>GMP</i> plugin advertises itself as a Windows Media Player compatible-plugin. There is unfortunately no way to check whether all the necessary plugins are available to the media framework to play the stream before we try. For example, the installed plugins might only be able to play back a specific version of Windows Media Video. There is no way to advertise that fact using the current plugin system. There is also no way to know what will be <i>inside </i> the stream before we start playing it back.
 </p>
 
+<p>
+Q: Why does my screen go into power saving mode whilst the player is actually playing a video?<br/>
+A: You will either need gnome-screensaver <b>and</b> gnome-power-manager running, or none of those two. Totem talks to gnome-screensaver to stop the screensaver itself, which in turn talks to gnome-power-manager to avoid going into power saving modes. If none of those are running, Totem will use X directly to disable the screensaver.
+</p>
+
 <a name="bugs"></a>
 <h1>Reporting bugs</h1>
 <p>
