@@ -1,3 +1,7 @@
+2008-08-29  Bastien Nocera  <hadess@hadess.net>
+
+	* index.html: Add FAQ mentioned by Fred Crozat (Closes: #432546)
+
 2008-04-17  Philip Withnall  <pwithnall@svn.gnome.org>
 
 	* index.html: Fixed spelling error. (Closes: #524698)
